# my_box_bot_gazebo

./: CMakeLists.txt  commands.bash  package.xml
launch/: box_bot_spawn_two_robots.launch.py  box_bot_xacro.launch.py  spawn_robot_ros2.launch.xml  spawn_robot_ros2_control.launch.xml  spawn_robot_ros2_control_complete.launch.xml  spawn_robot_ros2_control_velocity.launch.xml  spawn_robot_ros2_final.launch.xml  spawn_robot_ros2_physical.launch.xml  spawn_robot_ros2_sensor.launch.xml  urdf_visualize_control.launch.py  urdf_visualize_control_complete.launch.py  urdf_visualize_control_velocity.launch.py  urdf_visualize_final.launch.py  urdf_visualize_meshes_collisions_inertias.launch.py  urdf_visualize_physical.launch.py  urdf_visualize_sensor.launch.py
rviz/: urdf_vis.rviz
urdf/: box_bot.xacro  box_bot_control_complete.urdf  box_bot_control_complete_sensor.urdf  box_bot_control_complete_velocity.urdf  box_bot_final.urdf  box_bot_meshes_collisions_inertias.urdf
